# tap-nubank

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  meltano.yml  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: test.yml
src/tap_nubank/: client.py  streams.py  tap.py
src/tap_nubank/helper/: auth.py
src/tap_nubank/schemas/: card_statements.json
tap_nubank/: __init__.py  client.py
tests/: __init__.py  conftest.py  singer_test.py  test_core.py
