[project]
name = "tap-nubank"
version = "0.0.1"
description = "`tap-nubank` is a Singer tap for Nubank, built with the Meltano Singer SDK."
readme = "README.md"
authors = [
    {name = "Victor Mattos", email = "5757883+vicmattos@users.noreply.github.com"},
]
keywords = [
    "ELT",
    "Nubank",
]
# license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "singer-sdk>=0.33.1,<0.34.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]
test = [
    "pytest",
    "singer-sdk[testing]>=0.33.1,<0.34.0"
]
s3 = [
    "fs-s3fs>=1.1.1,<1.2.0",
]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_nubank"]
target-version = "py37"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_nubank"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
tap-nubank = 'tap_nubank.tap:TapNubank.cli'
