[project]
name = "tap-nubank"
version = "0.1.0"
description = "`tap-nubank` is a Singer tap for Nubank, built with the Meltano Singer SDK."
readme = "README.md"
authors = [
    {name = "Victor Mattos", email = "5757883+vicmattos@users.noreply.github.com"},
]
keywords = [
    "ELT",
    "Nubank",
]
# license = "Apache-2.0"
requires-python = ">=3.10" # search:pyversion
dependencies = [
    "pynubank",
    "singer-sdk>=0.33.1,<0.34.0",
]

[project.scripts]
tap-nubank = 'tap_nubank.tap:TapNubank.cli'

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pre-commit",
    "tox",
]
test = [
    "pytest",
    "singer-sdk[testing]>=0.33.1,<0.34.0"
]
s3 = [
    "fs-s3fs>=1.1.1,<1.2.0",
]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.ruff]
include = ["src/**/*.py", "tests/**/*.py"]
fix = true
line-length = 100
select = [
    "A",    # flake8-builtins: check builtins used as variables or parameters
    "B",    # flake8-bugbear: security warnings
    "E",    # pycodestyle-errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade: better syntax for python version
    "RUF",  # ruff
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.isort]
force-single-line = true
known-first-party = ["tap_nubank"]

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10" # search:pyversion
warn_unused_configs = true
